--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "your-build-command-here",
-    "start": "node server.js"
+    "build": "npm",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
